# nerode-public

./: README.md
.github/workflows/: ci.yaml
benchmarks/: README.md  example.txt  next-hasnext.txt
benchmarks/lee_alpharegex/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  3  4  5  6  7  8  9
benchmarks/oliveira/04_07/: randm04.02.02.01.020_0030.01.aba.beta  randm04.02.02.01.020_0030.04.aba.beta  randm04.02.02.03.020_0030.03.aba.beta  randm04.02.02.04.020_0030.03.aba.beta  randm04.02.02.05.020_0030.01.aba.beta  randm04.02.02.06.020_0030.01.aba.beta  randm04.02.02.07.020_0030.03.aba.beta  randm04.02.02.08.020_0030.01.aba.beta  randm04.02.02.08.020_0030.05.aba.beta  randm04.02.02.09.020_0030.05.aba.beta  randm04.02.02.12.020_0030.05.aba.beta  (+64 more)
nerode/: Makefile  dune-project  index.mld  nerode.opam
nerode-learn/: Makefile  nerodelearn.opam
nerode-learn/lib/: activeLearner.ml  classTree.ml  classTree.mli  cliOpt.ml  dune  hybridLearner.ml  inputReader.ml  kv.ml  lstarblanks.ml  obsTbl.ml  obsTbl.mli  solver.ml  superTable.ml  teacher.ml  teacherIndifferent.ml  teacherLStar.ml  teacherPosNeg.ml  teacherSep.ml  trie.ml  trie.mli  word.ml  word.mli  worklist.ml
nerode-learn/test/: dune  test.ml  tomita_t1  tomita_t3
nerode/lib/: alphabet.ml  alphabet.mli  dfa.ml  dfa.mli  dune  index.mld  intNfa.ml  kiss_lexer.mll  kiss_parser.mly  mealy_lexer.mll  mealy_parser.mly  nfa.ml  nfa.mli  parser.ml  partialMealy.ml  rx.ml  rx.mli  rx_lexer.mll  rx_parser.mly  word.ml  word.mli
nerode/test/: dune  test.ml
scripts/: abb2beta.py  beta2abb.py
(+875 files in other folders)
